--- a/index.css
+++ b/index.css
@@ -1,52 +1,25 @@
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
+  font-family: sans-serif;
+  margin: 20px;
 }
 
-.container {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgb(0 0 0 / 10%);
-}
-
-form {
-  width: 300px;
-}
-
-h2 {
-  margin-bottom: 20px;
-}
-
-label {
-  font-weight: bold;
-}
-
-input {
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 15px;
-  border: 1px #ccc;
-  border-radius: 5px;
+table {
   width: 100%;
-  box-sizing: border-box;
+  border-collapse: collapse;
+  border: 1px solid #ccc;
 }
 
-button {
-  padding: 10px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
+tr {
+  padding: 8px;
+  border: 1px solid #ccc;
+  text-align: left;
 }
 
-form button:hover {
-  background-color: #0056b3;
+tr th {
+  font-weight: bold;
+  background-color: #eee;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #f5f5f5;
 }
