--- a/index.css
+++ b/index.css
@@ -1,25 +1,45 @@
 body {
-  font-family: sans-serif;
-  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 100vh;
+  background-color: #f0f0f0;
+  margin: 0;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
+div {
+  width: 300px;
+  height: 400px;
+  padding: 16px;
   border: 1px solid #ccc;
+  background-color: #fff;
+  text-align: center;
+  margin: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-tr {
-  padding: 8px;
-  border: 1px solid #ccc;
-  text-align: left;
+img {
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  margin: auto 0;
 }
 
-tr th {
-  font-weight: bold;
-  background-color: #eee;
+h2 {
+  margin: 8px 0;
 }
 
-tbody tr:nth-child(odd) {
-  background-color: #f5f5f5;
+h3 {
+  margin: 6px 0;
+}
+
+p {
+  color: #666;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
